--- a/about.html
+++ b/about.html
@@ -1,21 +1,21 @@
 ---
 layout: page
 title: "About"
-description: "你是我的梦想"
+description: "About Me.."
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
 
 <!-- Language Selector -->
 <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option>
-    <option value="1"> 英文 English </option>
+    <option value="0" selected> 한국어 Korean </option>
+    <option value="1"> 영어 English </option>
 </select>
 
-<!-- Chinese Version -->
-<div class="zh post-container">
-    {% capture about_zh %}{% include about/zh.md %}{% endcapture %}
-    {{ about_zh | markdownify }}
+<!-- Korean Version -->
+<div class="ko post-container">
+    {% capture about_ko %}{% include about/ko.md %}{% endcapture %}
+    {{ about_ko | markdownify }}
 </div>
 
 <!-- English Version -->
